--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
 streamlit
 ultralytics
-opencv-python-headless
 Pillow
-numpy
 pandas
 torch
 torchvision
-gdown
