--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
+streamlit==1.28.1
 opencv-python-headless==4.8.1.78
+ultralytics==8.0.196
+Pillow==10.0.1
 numpy==1.24.3
-streamlit
-ultralytics
-Pillow
-pandas
-torch
-torchvision
+pandas==2.1.1
