--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.28.1
-opencv-python-headless==4.8.1.78
-ultralytics==8.0.196
-Pillow==10.0.1
-numpy==1.24.3
-pandas==2.1.1
+streamlit
+opencv-python-headless
+ultralytics>=8.1.0
+numpy>=2.0.0
+pandas>=2.2.0
+Pillow>=10.1.0
